--- a/Matrix/Matrix.vcxproj
+++ b/Matrix/Matrix.vcxproj
@@ -24,6 +24,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Matrix</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>Matrix</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -159,7 +160,7 @@
     <ClCompile Include="main.cpp">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
     </ClCompile>
-    <ClCompile Include="ParseTab.cpp" />
+    <ClCompile Include="CParseTable.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -170,9 +171,9 @@
     <ClInclude Include="CMatrixOperation.ipp" />
     <ClInclude Include="CParser.h" />
     <ClInclude Include="CStringOperation.h" />
-    <ClInclude Include="Matrix.h" />
+    <ClInclude Include="CMatrix.h" />
     <ClInclude Include="CMatrixOperation.h" />
-    <ClInclude Include="ParseTab.h" />
+    <ClInclude Include="CParseTable.h" />
     <ClInclude Include="test.h" />
   </ItemGroup>
   <ItemGroup>
